changed GIF url

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "conslog",
     "displayName": "Conslog",
     "description": "Wrap console.log() around selection.",
+    "publisher": "mrchrmn",
     "version": "1.0.0",
     "engines": {
         "vscode": "^1.58.0"
