--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
                 "command": "editor.action.insertSnippet",
                 "when": "editorTextFocus",
                 "args": {
-                    "name": "Conslog - clear console.logs"
+                    "name": "Conslog - delete console.logs"
                 }
             },
             {
@@ -40,6 +40,14 @@
                 "when": "editorTextFocus",
                 "args": {
                     "name": "Conslog - undo log selection"
+                }
+            },
+            {
+                "key": "alt+shift+l",
+                "command": "editor.action.insertSnippet",
+                "when": "editorTextFocus",
+                "args": {
+                    "name": "Conslog - log variable"
                 }
             }
         ]
