configuration defaults for code suggestions

--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
         "Snippets"
     ],
     "contributes": {
+        "configurationDefaults": {
+            "[javascript]": {
+                "editor.suggest.snippetsPreventQuickSuggestions": false
+            }
+        },
         "snippets": [
             {
                 "language": "javascript",
