--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "engines": {
         "vscode": "^1.58.0"
     },
+    "icon": "conslog_icon.png",
     "categories": [
         "Snippets"
     ],
